--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,8 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>CADisableMinimumFrameDurationOnPhone</key>
-    <true/>
     <key>CFBundleDevelopmentRegion</key>
     <string>$(DEVELOPMENT_LANGUAGE)</string>
     <key>CFBundleDisplayName</key>
@@ -26,6 +24,8 @@
     <string>$(FLUTTER_BUILD_NUMBER)</string>
     <key>LSRequiresIPhoneOS</key>
     <true/>
+    <key>CADisableMinimumFrameDurationOnPhone</key>
+    <true/>
     <key>UIApplicationSupportsIndirectInputEvents</key>
     <true/>
     <key>UILaunchStoryboardName</key>
@@ -36,21 +36,20 @@
     <array>
         <string>UIInterfaceOrientationPortrait</string>
     </array>
-    
+    <key>UIViewControllerBasedStatusBarAppearance</key>
+    <false/>
+
     <key>UIBackgroundModes</key>
     <array>
         <string>fetch</string>
         <string>remote-notification</string>
     </array>
-    <key>NSUserNotificationAlertStyle</key>
-    <string>alert</string>
-    <key>PermissionGroupNotification</key>
-    <string>Minimalist needs to send you daily quotes and task reminders.</string>
+
+    <key>NSUserNotificationUsageDescription</key>
+    <string>We need to send you daily quotes and task reminders to keep you motivated.</string>
     
     <key>NSLocalNotificationsUsageDescription</key>
-    <string>We use notifications to send you daily motivational quotes.</string>
+    <string>We use notifications to send you daily motivational quotes and reminders.</string>
 
-    <key>UIViewControllerBasedStatusBarAppearance</key>
-    <false/>
 </dict>
 </plist>
